force-app/main/default/objects/SDO_Sales_GPT_Simulated_Action__c/fields/Sales_GPT_Next_Reply__c.field-meta.xml
<CustomField>
    <fullName>Sales_GPT_Next_Reply__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Reply</label>
    <referenceTo>SDO_Sales_GPT_Simulated_Reply__c</referenceTo>
    <relationshipLabel>Sales GPT Simulated Actions (Sales GPT Next Reply)</relationshipLabel>
    <relationshipName>Sales_GPT_Simulated_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>