force-app/main/default/objects/SDO_Sales_GPT_Simulated_Action__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Copy to Clipboard</fullName>
            </value>
            <value>
                <fullName>Edit Record</fullName>
            </value>
            <value>
                <fullName>Email Composer</fullName>
            </value>
            <value>
                <fullName>Field Update</fullName>
            </value>
            <value>
                <fullName>Launch Flow</fullName>
            </value>
            <value>
                <fullName>Open URL</fullName>
            </value>
            <value>
                <fullName>Toggle Next Reply</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>