force-app/main/default/objects/SDO_Sales_GPT_Simulated_Action__c/fields/Update_With__c.field-meta.xml
<CustomField>
    <fullName>Update_With__c</fullName>
    <label>Update With</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>